[package]
name = "portpicker"
description = "Pick a free unused port"
version = "0.1.1"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

repository = "https://github.com/Dentosal/portpicker-rs"
readme = "README.md"

keywords = ["port", "network"]
categories = ["network-programming"]

license = "Unlicense"

[dependencies]
rand = "0.8"

